--- a/create.html
+++ b/create.html
@@ -33,7 +33,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 <body class="body features">
   <div data-collapse="medium" data-animation="over-left" data-duration="250" data-easing="ease-out" data-easing2="ease-in" data-doc-height="1" role="banner" class="navigation w-nav">
     <div class="nav-wrap">
-      <a href="index.html" class="nav-logo-link w-nav-brand"><img src="images/SP-Logo-BLACK.svg" width="145" alt="" class="logo-image"></a>
+      <a href="index" class="nav-logo-link w-nav-brand"><img src="images/SP-Logo-BLACK.svg" width="145" alt="" class="logo-image"></a>
       <div class="menu">
         <nav role="navigation" class="nav-items w-nav-menu">
           <div data-hover="1" data-delay="0" data-w-id="45b16a4a-73e9-0d18-9e54-de20285e9d42" class="dropdown w-dropdown">
@@ -43,19 +43,19 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
             </div>
             <nav class="dropdown-list w-dropdown-list">
               <div class="dropdown-link-parent">
-                <a href="build.html" class="dropdown-link w-dropdown-link">Builder</a>
+                <a href="build" class="dropdown-link w-dropdown-link">Builder</a>
               </div>
               <div class="dropdown-link-parent">
-                <a href="create.html" aria-current="page" class="dropdown-link w-dropdown-link w--current">Editor</a>
+                <a href="create" aria-current="page" class="dropdown-link w-dropdown-link w--current">Editor</a>
               </div>
               <div class="dropdown-link-parent">
-                <a href="manage.html" class="dropdown-link w-dropdown-link">Workflow</a>
+                <a href="manage" class="dropdown-link w-dropdown-link">Workflow</a>
               </div>
               <div class="dropdown-link-parent">
-                <a href="engage.html" class="dropdown-link w-dropdown-link">Engage &amp; Earn</a>
+                <a href="engage" class="dropdown-link w-dropdown-link">Engage &amp; Earn</a>
               </div>
               <div class="dropdown-link-parent">
-                <a href="hosting.html" class="dropdown-link w-dropdown-link">Hosting &amp; Performance</a>
+                <a href="hosting" class="dropdown-link w-dropdown-link">Hosting &amp; Performance</a>
               </div>
             </nav>
           </div>
@@ -66,40 +66,40 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
             </div>
             <nav class="dropdown-list w-dropdown-list">
               <div class="dropdown-link-parent">
-                <a href="vs/wordpress.html" class="dropdown-link w-dropdown-link">Storipress vs WordPress</a>
+                <a href="vs/wordpress" class="dropdown-link w-dropdown-link">Storipress vs WordPress</a>
               </div>
               <div class="dropdown-link-parent">
-                <a href="vs/wix.html" class="dropdown-link w-dropdown-link">Storipress vs Wix, Squarespace</a>
+                <a href="vs/wix" class="dropdown-link w-dropdown-link">Storipress vs Wix, Squarespace</a>
               </div>
               <div class="dropdown-link-parent">
-                <a href="vs/medium.html" class="dropdown-link w-dropdown-link">Storipress vs Medium</a>
+                <a href="vs/medium" class="dropdown-link w-dropdown-link">Storipress vs Medium</a>
               </div>
               <div class="dropdown-link-parent">
-                <a href="vs/what-wordpress-really-costs-you.html" class="dropdown-link w-dropdown-link">WordPress: Hidden Costs</a>
+                <a href="vs/what-wordpress-really-costs-you" class="dropdown-link w-dropdown-link">WordPress: Hidden Costs</a>
               </div>
             </nav>
           </div>
-          <a href="pricing.html" class="nav-item w-nav-link">Pricing</a>
+          <a href="pricing" class="nav-item w-nav-link">Pricing</a>
           <div class="mm-parent">
             <div class="mm-content-parent">
               <div class="mm-section-parent">
                 <h1 class="mm-heading">Features</h1>
-                <a href="build.html" class="mm-button">Builder</a>
-                <a href="create.html" aria-current="page" class="mm-button w--current">Editor</a>
-                <a href="manage.html" class="mm-button">Workflow</a>
-                <a href="engage.html" class="mm-button">Engage &amp; Earn</a>
-                <a href="hosting.html" class="mm-button">Hosting &amp; Performance</a>
+                <a href="build" class="mm-button">Builder</a>
+                <a href="create" aria-current="page" class="mm-button w--current">Editor</a>
+                <a href="manage" class="mm-button">Workflow</a>
+                <a href="engage" class="mm-button">Engage &amp; Earn</a>
+                <a href="hosting" class="mm-button">Hosting &amp; Performance</a>
               </div>
               <div class="mm-section-parent">
                 <h1 class="mm-heading">Storipress vs</h1>
-                <a href="vs/wordpress.html" class="mm-button">vs WordPress</a>
-                <a href="vs/wix.html" class="mm-button">vs Wix, Squarespace</a>
-                <a href="vs/medium.html" class="mm-button">vs Medium</a>
-                <a href="vs/what-wordpress-really-costs-you.html" class="mm-button">WordPress: Hidden Costs</a>
+                <a href="vs/wordpress" class="mm-button">vs WordPress</a>
+                <a href="vs/wix" class="mm-button">vs Wix, Squarespace</a>
+                <a href="vs/medium" class="mm-button">vs Medium</a>
+                <a href="vs/what-wordpress-really-costs-you" class="mm-button">WordPress: Hidden Costs</a>
               </div>
               <div class="mm-section-parent">
                 <h1 class="mm-heading">Pricing</h1>
-                <a href="pricing.html" class="mm-button">Pricing</a>
+                <a href="pricing" class="mm-button">Pricing</a>
               </div>
             </div>
           </div>
@@ -296,7 +296,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       <h3 class="heading-copy">Compare Storipress with</h3>
     </div>
     <div class="div-block-13">
-      <a href="vs/wordpress.html" class="compare-with-div-link-2 w-inline-block">
+      <a href="vs/wordpress" class="compare-with-div-link-2 w-inline-block">
         <div class="comparison-header-parent">
           <div><img src="images/word-press-logo.svg" loading="lazy" alt=""></div>
           <div><img src="images/path.svg" loading="lazy" alt=""></div>
@@ -305,7 +305,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         <div class="text-block-5">Open-source, but needs extensive customisation, plugins, custom development work, and ongoing maintenance.</div>
       </a>
       <div class="div-block-30"></div>
-      <a href="vs/wix.html" class="compare-with-div-link-2 w-inline-block">
+      <a href="vs/wix" class="compare-with-div-link-2 w-inline-block">
         <div class="comparison-header-parent">
           <div><img src="images/wix-logo.svg" loading="lazy" alt=""></div>
           <div><img src="images/path.svg" loading="lazy" alt=""></div>
@@ -318,28 +318,28 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   <div class="feature-bounding-box other-features-1">
     <h2 class="heading-10">All features</h2>
     <div class="div-block-1397">
-      <a href="manage.html" class="other-features-parent w-inline-block">
+      <a href="manage" class="other-features-parent w-inline-block">
         <div class="other-image-parent"><img src="images/Workflow.svg" loading="lazy" alt=""></div>
         <div class="div-block-1400">
           <h4 class="heading-11">Workflow</h4>
           <div class="text-block-45">Ditch the spreadsheet and manage your writing team efficiently.</div>
         </div>
       </a>
-      <a href="build.html" class="other-features-parent w-inline-block">
+      <a href="build" class="other-features-parent w-inline-block">
         <div class="other-image-parent"><img src="images/design.svg" loading="lazy" alt=""></div>
         <div class="div-block-1400">
           <h4 class="heading-11">Build</h4>
           <div class="text-block-45">Design and build a performant, well designed publication, quickly.</div>
         </div>
       </a>
-      <a href="engage.html" class="other-features-parent w-inline-block">
+      <a href="engage" class="other-features-parent w-inline-block">
         <div class="other-image-parent"><img src="images/Eye.svg" loading="lazy" alt=""></div>
         <div class="div-block-1400">
           <h4 class="heading-11">Engagement</h4>
           <div class="text-block-45">Maximise your readership, monetise your audience.</div>
         </div>
       </a>
-      <a href="hosting.html" class="other-features-parent w-inline-block">
+      <a href="hosting" class="other-features-parent w-inline-block">
         <div class="other-image-parent"><img src="images/Cloud.svg" loading="lazy" alt=""></div>
         <div class="div-block-1400">
           <h4 class="heading-11">Hosting</h4>
@@ -355,7 +355,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
           <h2 class="heading-12">Half the price of a WordPress plugin</h2>
           <div class="cta-pricing-description">Build your publication for free (no trial period, no credit card). Just add a plan for a custom domain when you&#x27;re ready.</div>
         </div>
-        <a href="pricing.html" class="button square-corners left-align w-button">View Pricing</a>
+        <a href="pricing" class="button square-corners left-align w-button">View Pricing</a>
         <link rel="prefetch" href="/pricing">
       </div>
       <div data-w-id="afb90ad6-a3c3-b461-2a02-e9feb26a5348" class="form-parent footer-cta">
@@ -378,7 +378,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     <div class="footer-flex-container">
       <div class="div-block-1402">
         <div class="footer-logo-contact-div">
-          <a href="index.html" class="footer-logo-link w-inline-block"><img src="images/SP-Logo-WHITE.svg" width="152" alt="" class="footer-logo-image"></a>
+          <a href="index" class="footer-logo-link w-inline-block"><img src="images/SP-Logo-WHITE.svg" width="152" alt="" class="footer-logo-image"></a>
           <div class="footer-text location">Sydney, Australia<br>Taichung, Taiwan</div>
           <div class="div-block-3">
             <a href="mailto:hello@storipress.com?subject=To%20my%20mates%20%40%20Storipress%20..." class="footer-contact-buttons w-inline-block"><img src="images/email.svg" loading="lazy" alt="Email symbol"></a>
@@ -391,22 +391,22 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
           <h5 class="footer-list-heading">Product</h5>
           <ul role="list" class="w-list-unstyled">
             <li>
-              <a href="manage.html" class="footer-text">Workflow</a>
+              <a href="manage" class="footer-text">Workflow</a>
             </li>
             <li>
-              <a href="create.html" aria-current="page" class="footer-text w--current">Editor</a>
+              <a href="create" aria-current="page" class="footer-text w--current">Editor</a>
             </li>
             <li>
-              <a href="build.html" class="footer-text">Builder</a>
+              <a href="build" class="footer-text">Builder</a>
             </li>
             <li>
-              <a href="engage.html" class="footer-text">Engage &amp; Earn</a>
+              <a href="engage" class="footer-text">Engage &amp; Earn</a>
             </li>
             <li>
-              <a href="hosting.html" class="footer-text">Hosting &amp; Performance</a>
+              <a href="hosting" class="footer-text">Hosting &amp; Performance</a>
             </li>
             <li>
-              <a href="pricing.html" class="footer-text">Pricing</a>
+              <a href="pricing" class="footer-text">Pricing</a>
             </li>
           </ul>
         </div>
@@ -431,16 +431,16 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
           <h5 class="footer-list-heading">Compare</h5>
           <ul role="list" class="w-list-unstyled">
             <li>
-              <a href="vs/wordpress.html" class="footer-text">WordPress</a>
+              <a href="vs/wordpress" class="footer-text">WordPress</a>
             </li>
             <li>
-              <a href="vs/wix.html" class="footer-text">Wix</a>
+              <a href="vs/wix" class="footer-text">Wix</a>
             </li>
             <li>
-              <a href="vs/medium.html" class="footer-text">Medium</a>
+              <a href="vs/medium" class="footer-text">Medium</a>
             </li>
             <li>
-              <a href="vs/wordpress.html" class="footer-text">WordPress: Hidden Costs</a>
+              <a href="vs/wordpress" class="footer-text">WordPress: Hidden Costs</a>
             </li>
           </ul>
         </div>
@@ -452,7 +452,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   <script src="js/webflow.js" type="text/javascript"></script>
   <!-- [if lte IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif] -->
   <!--  Google Tag Manager (noscript)  -->
-  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-5WLPRZG" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+  <noscript><iframe src="https://www.googletagmanager.com/ns?id=GTM-5WLPRZG" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   <!--  End Google Tag Manager (noscript)  -->
 </body>
 </html>
